workspace-sf/force-app/main/default/objects/Parceiro__c/Parceiro__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as informações dos parceiros da Porto</description>
    <label>Parceiro</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parceiros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>