workspace-sf/force-app/main/default/objects/Parceiro__c/fields/ApoliceFaturamento__c.field-meta.xml
<CustomField>
    <fullName>ApoliceFaturamento__c</fullName>
    <label>Apólice de Faturamento</label>
    <length>9</length>
    <type>Text</type>
</CustomField>