workspace-sf/force-app/main/default/objects/Parceiro__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <formula>LPAD( Conta__r.IdExterno__c , 14, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Código de identificação do parceiro  - CNPJ da conta sem pontuação</inlineHelpText>
    <label>Código</label>
    <type>Text</type>
</CustomField>