workspace-sf/force-app/main/default/objects/Parceiro__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parceiros</relationshipLabel>
    <relationshipName>Parceiro</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>