workspace-sf/force-app/main/default/objects/Parceiro__c/fields/DiaFaturamento__c.field-meta.xml
<CustomField>
    <fullName>DiaFaturamento__c</fullName>
    <label>Dia do Faturamento</label>
    <length>2</length>
    <type>Text</type>
</CustomField>