workspace-sf/force-app/main/default/objects/Parceiro__c/fields/DiaPreFaturamento__c.field-meta.xml
<CustomField>
    <fullName>DiaPreFaturamento__c</fullName>
    <label>Dia do Pré-faturamento</label>
    <length>2</length>
    <type>Text</type>
</CustomField>