workspace-sf/force-app/main/default/objects/Parceiro__c/fields/EndossoBatimentoContabil__c.field-meta.xml
<CustomField>
    <fullName>EndossoBatimentoContabil__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY())) + LPAD(TEXT(MONTH(TODAY())),2,&apos;0&apos;) + &apos;001&apos;</defaultValue>
    <label>Endosso de Batimento Contábil</label>
    <length>10</length>
    <type>Text</type>
</CustomField>