workspace-sf/force-app/main/default/objects/Parceiro__c/fields/EndossoCobranca__c.field-meta.xml
<CustomField>
    <fullName>EndossoCobranca__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY())) + LPAD(TEXT(MONTH(TODAY())),2,&apos;0&apos;) + &apos;000&apos;</defaultValue>
    <label>Endosso de Cobrança</label>
    <length>10</length>
    <type>Text</type>
</CustomField>