workspace-sf/force-app/main/default/objects/Parceiro__c/fields/FaturaProdutosSeparados__c.field-meta.xml
<CustomField>
    <fullName>FaturaProdutosSeparados__c</fullName>
    <label>Fatura produtos separados?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>