workspace-sf/force-app/main/default/objects/Parceiro__c/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Forma de pagamento</label>
    <referenceTo>FormaPagamento__c</referenceTo>
    <relationshipLabel>Parceiros</relationshipLabel>
    <relationshipName>Parceiros</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>