workspace-sf/force-app/main/default/objects/Parceiro__c/fields/PossuiAnexoFatura__c.field-meta.xml
<CustomField>
    <fullName>PossuiAnexoFatura__c</fullName>
    <label>Possui Anexo Fatura?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Nao</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>