workspace-sf/force-app/main/default/objects/Parceiro__c/fields/PrazoVencimento__c.field-meta.xml
<CustomField>
    <fullName>PrazoVencimento__c</fullName>
    <inlineHelpText>Quantidade de dias para o vencimento da fatura, após o dia do faturamento</inlineHelpText>
    <label>Prazo de vencimento</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>