workspace-sf/force-app/main/default/objects/Parceiro__c/fields/SiglaParceiro__c.field-meta.xml
<CustomField>
    <fullName>SiglaParceiro__c</fullName>
    <label>Sigla do Parceiro</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>