workspace-sf/force-app/main/default/objects/Parceiro__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <length>2</length>
    <type>Text</type>
</CustomField>