workspace-sf/force-app/main/default/objects/Parceiro__c/fields/TipoParceria__c.field-meta.xml
<CustomField>
    <fullName>TipoParceria__c</fullName>
    <label>Tipo de parceria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REP</fullName>
                <label>Representação comercial</label>
            </value>
            <value>
                <fullName>PRE</fullName>
                <label>Prestação de serviços</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>