workspace-sf/force-app/main/default/objects/Parceiro__c/validationRules/ValidarApoliceFaturamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarApoliceFaturamento</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
   ISBLANK(ApoliceFaturamento__c),
   false,
   NOT( ISNUMBER( ApoliceFaturamento__c ) ) 
   || VALUE( ApoliceFaturamento__c )  &lt;= 0
)</errorConditionFormula>
    <errorMessage>Apólice Faturamento deve ser apenas numérico</errorMessage>
</ValidationRule>