workspace-sf/force-app/main/default/objects/Parceiro__c/validationRules/ValidarEmpresa.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarEmpresa</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK(Empresa__c ) ,FALSE,
  NOT(ISNUMBER( Empresa__c )) ||
  VALUE( Empresa__c )  &lt;= 0)</errorConditionFormula>
    <errorMessage>Campo Empresa deve ser apenas numérico</errorMessage>
</ValidationRule>