workspace-sf/force-app/main/default/objects/Parceiro__c/validationRules/ValidarRamo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarRamo</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK(Ramo__c ) , FALSE, 
  NOT( ISNUMBER( Ramo__c ) ) ||
  VALUE( Ramo__c )  &lt;= 0)</errorConditionFormula>
    <errorMessage>Campo Ramo deve ser apenas numérico</errorMessage>
</ValidationRule>