workspace-sf/force-app/main/default/objects/Parceiro__c/validationRules/ValidarSucursal.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarSucursal</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK(Sucursal__c ) , FALSE, 
  NOT(ISNUMBER( Sucursal__c )) ||
  VALUE( Sucursal__c )  &lt;= 0)</errorConditionFormula>
    <errorMessage>Campo Sucursal deve ser apenas numérico</errorMessage>
</ValidationRule>