workspace-sf/force-app/main/default/objects/Parceiro__c/validationRules/VerificarDiaFaturamento.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificarDiaFaturamento</fullName>
    <active>true</active>
    <errorConditionFormula>IF( LEN(DiaFaturamento__c ) == 2, 
  IF( ISNUMBER( DiaFaturamento__c ) , 
  VALUE( DiaFaturamento__c ) &lt;=0 ||
  VALUE( DiaFaturamento__c ) &gt; 31, 
  TRUE), 
TRUE)</errorConditionFormula>
    <errorMessage>Campo Dia do Faturamento deve ser entre 01 e 31</errorMessage>
</ValidationRule>