workspace-sf/force-app/main/default/objects/Parceiro__c/validationRules/VerificarDiaPreFaturamento.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificarDiaPreFaturamento</fullName>
    <active>true</active>
    <errorConditionFormula>IF( LEN(DiaPreFaturamento__c ) == 2 , 
 IF(ISNUMBER( DiaPreFaturamento__c ) , 
 VALUE(DiaPreFaturamento__c ) &lt;= 0 ||
 VALUE(DiaPreFaturamento__c ) &gt; 31 , 
 TRUE), 
TRUE)</errorConditionFormula>
    <errorMessage>Campo Dia do Pré-faturamento deve ser entre 01 e 31</errorMessage>
</ValidationRule>