workspace-sf/force-app/main/default/objects/Parceiro__c/validationRules/VerificarPrazoVencimento.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificarPrazoVencimento</fullName>
    <active>true</active>
    <errorConditionFormula>IF( LEN(PrazoVencimento__c) == 2 , 
  IF(ISNUMBER( PrazoVencimento__c ), 
  VALUE( PrazoVencimento__c) &lt;=0 ||
  VALUE( PrazoVencimento__c) &gt; 30, 
  TRUE), 
 TRUE)</errorConditionFormula>
    <errorMessage>Campo Prazo de vencimento deve ser entre 01 e 30</errorMessage>
</ValidationRule>