workspace-sf/force-app/main/default/objects/Parceiro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Empresa__c</columns>
    <columns>Sucursal__c</columns>
    <columns>Ramo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os parceiros</label>
</ListView>